@@ -1,3 +1,8 @@
+2012-05-15 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* support/regression/tests/gcc-torture-execute-961017-2.c: use less loops to
+	  reduce test time
+
 2012-05-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* sim/ucsim/hc08.src/hc08.cc,
